--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -28,9 +28,10 @@
     background-image: var(--lwj-gradient);
     background-size: 200%;
     border-bottom: 0.5px solid var(--light-gray);
-    height: 5px;
-    position: absolute;
     bottom: 100%;
+    height: 6px;
+    left: 0;
+    position: absolute;
     width: 100vw;
     z-index: 5;
   }
@@ -39,7 +40,7 @@
   .lwj-demo-footer .bottom-bar::after {
     content: '';
     position: absolute;
-    left: -5vw;
+    left: 0;
     width: 100vw;
   }
 
