--- a/src/_includes/default.liquid
+++ b/src/_includes/default.liquid
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ title }} · Learn With Jason</title>
+    <title>{{ meta.title }} · Learn With Jason</title>
     <link rel="stylesheet" href="https://use.typekit.net/jwa3agu.css" />
     <link rel="stylesheet" href="/css/global.css" />
   </head>
