fix: footer link

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -78,7 +78,7 @@
     >Source Code</a
   >
   <a
-    href="http://app.netlify.com/start/deploy?repository=https://github.com/{{ repo }}?utm_source=learnwithjason&utm_medium=lwj-demo-footer-jl&utm_campaign=devex"
+    href="http://app.netlify.com/start/deploy?repository=https://github.com/{{ meta.repo }}?utm_source=learnwithjason&utm_medium=lwj-demo-footer-jl&utm_campaign=devex"
     >Deploy Your Own Copy</a
   >{% endif %}
 
