fix: use correct title

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -131,7 +131,7 @@
       ><img src="/images/learn-with-jason-dark.svg" alt="Learn With Jason"
     /></a>
     <a href="/" rel="home" class="home-link">
-      {{ title }}
+      {{ meta.title }}
     </a>
   </div>
 
