--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -130,9 +130,7 @@
     <a href="https://www.learnwithjason.dev" class="logo"
       ><img src="/images/learn-with-jason-dark.svg" alt="Learn With Jason"
     /></a>
-    <a href="/" rel="home" class="home-link">
-      {{ meta.title }}
-    </a>
+    <a href="/" rel="home" class="home-link"> {{ meta.title }} </a>
   </div>
 
   <div class="top-bar"></div>
